--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "@commitlint/cz-commitlint": "^20.3.1",
-    "@iconify/json": "^2.2.429",
+    "@iconify/json": "^2.2.430",
     "@iconify/utils": "^3.1.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.4",
@@ -127,10 +127,11 @@
     "vite-plugin-version-mark": "^0.2.2",
     "vitepress-demo-plugin": "^1.5.1",
     "vitepress-i18n": "^1.3.5",
+    "vitepress-linkcard": "^2.0.1",
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-llms": "^1.10.0",
-    "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-plugin-npm-commands": "^0.8.1",
+    "vitepress-plugin-nprogress": "^0.1.1",
     "vitepress-plugin-rss": "^0.4.2",
     "vitepress-plugin-setfrontmatter": "^1.2.3"
   },
@@ -145,6 +146,8 @@
     "@mdit/plugin-tasklist": "^0.22.2",
     "@mermaid-js/layout-elk": "^0.2.0",
     "@mermaid-js/mermaid-zenuml": "^0.2.2",
+    "@miletorix/vitepress-back-to-top-button": "^1.0.3",
+    "@miletorix/vitepress-html-preview": "^0.0.4",
     "@opentiny/icons": "^0.1.4",
     "@tombcato/smart-ticker": "^1.2.3",
     "@vitepress-code-preview/container": "^1.0.8",
@@ -162,6 +165,7 @@
     "browserslist": "^4.28.1",
     "copy-to-clipboard": "^3.3.3",
     "cross-env": "^10.1.0",
+    "crypto-js": "^4.2.0",
     "deepmerge-ts": "^7.1.5",
     "driver.js": "^1.4.0",
     "echarts": "^6.0.0",
@@ -186,12 +190,12 @@
     "markdown-it-named-code-blocks": "^1.0.6",
     "markdown-it-regex": "^0.2.2",
     "markdown-it-replace-link": "^1.2.2",
+    "markdown-it-vitepress-encrypt": "^0.1.0",
     "markdown-it-wordless": "^1.1.1",
     "markdown-to-txt": "^2.0.1",
     "marked": "^17.0.1",
     "medium-zoom": "^1.1.0",
     "nanoid": "^5.1.6",
-    "nprogress-v2": "^1.1.10",
     "open-props": "^1.7.17",
     "ora": "^9.0.0",
     "pagefind": "^1.4.0",
@@ -208,16 +212,23 @@
     "universal-waterfall-layout": "^1.0.4",
     "vite-plugin-inspect": "^11.3.3",
     "vitepress": "^2.0.0-alpha.15",
+    "vitepress-component-medium-zoom": "^1.1.1",
     "vitepress-markdown-timeline": "^1.2.2",
     "vitepress-markmap-preview": "^0.2.0",
+    "vitepress-mermaid-renderer": "^1.1.7",
     "vitepress-plugin-auto-frontmatter": "^1.0.13",
+    "vitepress-plugin-bprogress": "^1.0.3",
     "vitepress-plugin-codeblocks-fold": "^1.2.35",
+    "vitepress-plugin-doc-analysis": "^1.0.13",
     "vitepress-plugin-frontmatter": "^2.0.1",
+    "vitepress-plugin-glossary": "^1.0.6",
     "vitepress-plugin-group-icons": "^1.7.1",
     "vitepress-plugin-image-preview": "^0.1.1",
     "vitepress-plugin-legend": "^1.3.0",
+    "vitepress-plugin-llmstxt": "^0.5.1",
     "vitepress-plugin-md-h1": "^1.0.11",
     "vitepress-plugin-pagefind": "^0.4.18",
+    "vitepress-plugin-sponsor": "^0.2.0",
     "vitepress-plugin-tabs": "^0.7.3",
     "vitepress-protect-plugin": "^1.0.6",
     "vue3-next-qrcode": "^4.0.0",
@@ -235,11 +246,11 @@
     "prismjs": "^1.30.0",
     "release-it": "^19.2.3",
     "svg-pan-zoom": "^3.6.2",
-    "vite": "8.0.0-beta.7",
+    "vite": "8.0.0-beta.8",
     "vite-plugin-html": "^3.2.2",
     "vitepress": "^2.0.0-alpha.15",
     "vitest": "^4.0.17",
-    "vue": "^3.5.26"
+    "vue": "^3.5.27"
   },
   "version": "0.11.19"
 }
