--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     }
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^7.0.1",
+    "@antfu/eslint-config": "^7.1.0",
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "@commitlint/cz-commitlint": "^20.3.1",
@@ -130,6 +130,7 @@
     "vitepress-linkcard": "^2.0.1",
     "vitepress-markdown-it-stepper": "^0.1.1",
     "vitepress-plugin-llms": "^1.10.0",
+    "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-plugin-npm-commands": "^0.8.1",
     "vitepress-plugin-nprogress": "^0.1.1",
     "vitepress-plugin-rss": "^0.4.2",
@@ -159,9 +160,9 @@
     "@vue-styled-components/core": "^1.13.3",
     "@vue-styled-components/plugin": "^1.0.1",
     "@vueuse/core": "^14.1.0",
-    "@zumer/snapdom": "^2.0.1",
+    "@zumer/snapdom": "^2.0.2",
     "animate.css": "^4.1.1",
-    "animejs": "4.2.2",
+    "animejs": "4.3.0",
     "browserslist": "^4.28.1",
     "copy-to-clipboard": "^3.3.3",
     "cross-env": "^10.1.0",
@@ -197,7 +198,7 @@
     "medium-zoom": "^1.1.0",
     "nanoid": "^5.1.6",
     "open-props": "^1.7.17",
-    "ora": "^9.0.0",
+    "ora": "^9.1.0",
     "pagefind": "^1.4.0",
     "pinia": "^3.0.4",
     "pinyin-match": "^1.2.10",
@@ -209,7 +210,7 @@
     "tdesign-vue-next": "^1.18.0",
     "three": "^0.182.0",
     "ua-parser-js": "^2.0.8",
-    "universal-waterfall-layout": "^1.0.4",
+    "universal-waterfall-layout": "^1.1.0",
     "vite-plugin-inspect": "^11.3.3",
     "vitepress": "^2.0.0-alpha.15",
     "vitepress-component-medium-zoom": "^1.1.1",
@@ -232,6 +233,7 @@
     "vitepress-plugin-tabs": "^0.7.3",
     "vitepress-protect-plugin": "^1.0.6",
     "vue3-next-qrcode": "^4.0.0",
+    "vue3-signature": "^0.4.1",
     "vue3-simple-icons": "^15.6.0",
     "xlogs": "^0.1.0",
     "yuppie-ui": "^0.0.11"
@@ -244,7 +246,7 @@
     "mermaid": "^11.12.2",
     "oxc-minify": "^0.93.0",
     "prismjs": "^1.30.0",
-    "release-it": "^19.2.3",
+    "release-it": "^19.2.4",
     "svg-pan-zoom": "^3.6.2",
     "vite": "8.0.0-beta.8",
     "vite-plugin-html": "^3.2.2",
