--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     }
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^7.1.0",
+    "@antfu/eslint-config": "^7.2.0",
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "@commitlint/cz-commitlint": "^20.3.1",
@@ -75,11 +75,10 @@
     "@iconify/utils": "^3.1.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.4",
-    "@tdesign-vue-next/auto-import-resolver": "^0.1.4",
     "@types/fs-extra": "^11.0.4",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^25.0.9",
+    "@types/node": "^25.0.10",
     "@types/three": "^0.182.0",
     "@vitejs/plugin-vue-jsx": "^5.1.3",
     "archiver": "^7.0.1",
@@ -98,11 +97,12 @@
     "jszip": "^3.10.1",
     "markdown-it": "^14.1.0",
     "mkcert": "^3.2.0",
+    "naive-ui": "^2.43.2",
     "node-scp2": "^1.0.0",
     "picocolors": "^1.1.1",
     "postcss": "^8.5.6",
     "rimraf": "^6.1.2",
-    "sass-embedded": "^1.97.2",
+    "sass-embedded": "^1.97.3",
     "sharp": "^0.34.5",
     "sitemap": "^9.0.0",
     "svgo": "^4.0.0",
@@ -114,6 +114,7 @@
     "unplugin-icons": "^23.0.1",
     "unplugin-version-injector": "^2.1.1",
     "unplugin-vue-components": "^31.0.0",
+    "vfonts": "^0.0.3",
     "vite-plugin-checker": "^0.12.0",
     "vite-plugin-compression2": "^2.4.0",
     "vite-plugin-env-parse": "^1.0.15",
@@ -162,7 +163,7 @@
     "@vueuse/core": "^14.1.0",
     "@zumer/snapdom": "^2.0.2",
     "animate.css": "^4.1.1",
-    "animejs": "4.3.0",
+    "animejs": "4.3.1",
     "browserslist": "^4.28.1",
     "copy-to-clipboard": "^3.3.3",
     "cross-env": "^10.1.0",
@@ -175,7 +176,7 @@
     "gsap": "^3.14.2",
     "hover-tilt": "^1.0.0",
     "html2particle": "^0.0.11-beta.5",
-    "lodash-es": "^4.17.22",
+    "lodash-es": "^4.17.23",
     "log-assistant": "^1.1.5",
     "log-symbols": "^7.0.1",
     "lunisolar": "^2.6.0",
@@ -207,7 +208,6 @@
     "scp2": "^0.5.0",
     "screenfull": "^6.0.2",
     "simple-git": "^3.30.0",
-    "tdesign-vue-next": "^1.18.0",
     "three": "^0.182.0",
     "ua-parser-js": "^2.0.8",
     "universal-waterfall-layout": "^1.1.0",
