--- a/package.json
+++ b/package.json
@@ -71,11 +71,13 @@
     "@commitlint/cli": "^20.3.1",
     "@commitlint/config-conventional": "^20.3.1",
     "@commitlint/cz-commitlint": "^20.3.1",
-    "@iconify/json": "^2.2.431",
+    "@iconify/json": "^2.2.432",
     "@iconify/utils": "^3.1.0",
     "@julr/vite-plugin-validate-env": "^2.2.0",
     "@release-it/conventional-changelog": "^10.0.4",
     "@types/fs-extra": "^11.0.4",
+    "@types/imagemin": "^9.0.1",
+    "@types/imagemin-webp": "^7.0.3",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
     "@types/node": "^25.0.10",
@@ -94,6 +96,7 @@
     "font-spider": "^1.3.5",
     "glob": "^13.0.0",
     "husky": "^9.1.7",
+    "imagemin-webp": "^8.0.0",
     "jszip": "^3.10.1",
     "markdown-it": "^14.1.0",
     "mkcert": "^3.2.0",
@@ -122,6 +125,7 @@
     "vite-plugin-html-config": "^2.0.2",
     "vite-plugin-image-optimizer": "^2.0.3",
     "vite-plugin-image-preload": "^1.0.0",
+    "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-mkcert": "^1.17.9",
     "vite-plugin-mock-dev-server": "^2.0.7",
     "vite-plugin-qrcode": "^0.3.0",
@@ -197,7 +201,7 @@
     "markdown-it-wordless": "^1.1.1",
     "markdown-to-txt": "^2.0.1",
     "marked": "^17.0.1",
-    "mathjax": "^3.2.2",
+    "mathjax": "^4.1.0",
     "medium-zoom": "^1.1.0",
     "nanoid": "^5.1.6",
     "open-props": "^1.7.17",
